--- a/logedin.html
+++ b/logedin.html
@@ -105,7 +105,7 @@
         </div>
     </div>
     <footer>
-        <p>Entwickelt für die <span>FVSS</span>. <a href="#">Impressum</a></p>
+        <p>Entwickelt für die <span>FVSS</span>. <a href="impressum">Impressum</a></p>
     </footer>
 
     <script>
