--- a/impressum.html
+++ b/impressum.html
@@ -53,7 +53,7 @@
         <p><strong>Kontakt:</strong></p>
         <p>
             Telefon: +49 (0) 123 456 789<br>
-            E-Mail: <a href="mailto:kanalmaluten@gmail,com">Mail</a>
+            E-Mail: <a href="mailto:kanalmaluten@gmail.com">Mail</a>
         </p>
         <p><strong>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</strong></p>
         <p>
