--- a/logedin.html
+++ b/logedin.html
@@ -121,7 +121,8 @@
             "admin@fvss.de": 5,
             "schueler3@fvss.de": 2,
             "schueler5@fvss.de": 1,
-            "schueler4@fvss.de": 4
+            "schueler4@fvss.de": 4,
+            "niklas.seibel@fvss.de": 1
         };
 
         // Fortschrittsstufen
