--- a/loggingin.html
+++ b/loggingin.html
@@ -68,7 +68,7 @@
         <h1>Anmelden</h1>
         <form id="loginForm" action="https://db-sites.github.io/DBSITE/logedin" method="GET" onsubmit="return handleSubmit(event)">
             <input type="text" id="email" class="input-field" placeholder="Schueler Adresse" name="email" required>
-            <input type="password" id="password" class="input-field" placeholder="Passwort" required>
+            <input type="password" id="password" class="input-field" placeholder="Passwort">
             <div>
                 <button type="button" class="btn secondary-btn" onclick="window.history.back();">Zurück</button>
                 <button type="submit" class="btn">Weiter</button>
