--- a/logedin.html
+++ b/logedin.html
@@ -117,12 +117,13 @@
 
         // Schülerdaten mit 6 Stufen (5 = Admin)
         const studentProgress = {
-            "maxim.getz@fvss.de": 2,
-            "admin@fvss.de": 5,
+            "Maxim.getz@fvss.de": 2,
+            "Admin@fvss.de": 5,
             "schueler3@fvss.de": 2,
             "schueler5@fvss.de": 1,
             "schueler4@fvss.de": 4,
-            "niklas.seibel@fvss.de": 1
+            "Niklas.seibel@fvss.de": 1,
+            "Paul.schmidt@fvss.de": 1
         };
 
         // Fortschrittsstufen
