--- a/logedin.html
+++ b/logedin.html
@@ -123,7 +123,8 @@
             "schueler5@fvss.de": 1,
             "schueler4@fvss.de": 4,
             "Niklas.seibel@fvss.de": 1,
-            "Paul.schmidt@fvss.de": 1
+            "Paul.schmidt@fvss.de": 1,
+            "Luca.Sternberg@fvss.de": 1
         };
 
         // Fortschrittsstufen
