--- a/logedin.html
+++ b/logedin.html
@@ -124,7 +124,8 @@
             "schueler4@fvss.de": 4,
             "Niklas.seibel@fvss.de": 1,
             "Paul.schmidt@fvss.de": 1,
-            "Luca.Sternberg@fvss.de": 1
+            "Luca.sternberg@fvss.de": 2,
+            "Shawn.ohms@fvss.de": 1
         };
 
         // Fortschrittsstufen
