--- a/loggingin.html
+++ b/loggingin.html
@@ -75,8 +75,8 @@
             </div>
         </form>
         <div>
-            <p><a href="kk" class="link">Keinen User? Erstellen Sie jetzt ein!</a></p>
-            <p><a href="Keincode" class="link">Sie können nicht auf Ihren Code zugreifen?</a></p>
+            <p><a href="kkfvss" class="link">Keinen User? Erstellen Sie jetzt ein!</a></p>
+            <p><a href="kcfvss" class="link">Sie können nicht auf Ihren Code zugreifen?</a></p>
         </div>
     </div>
     <script>
